--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,6 +31,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with auxilium
       run: |
-        auxilium test
-        auxilium doc
-        auxilium build
+        auxilium -e '' test
+        auxilium -e '' doc
+        auxilium -e '' build
